JobWorker script handling