@@ -12,7 +12,7 @@ package io.taktx.engine.pi.processor;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import io.taktx.dto.ActtivityStateEnum;
-import io.taktx.dto.ContinueFlowElementTriggerDTO;
+import io.taktx.dto.ExternalTaskResponseTriggerDTO;
 import io.taktx.dto.ScriptType;
 import io.taktx.engine.feel.FeelExpressionHandler;
 import io.taktx.engine.pd.model.ScriptTask;
@@ -31,8 +31,7 @@ import lombok.extern.slf4j.Slf4j;
 @NoArgsConstructor
 @Slf4j
 public class ScriptTaskInstanceProcessor
-    extends ActivityInstanceProcessor<
-        ScriptTask, ScriptTaskInstance, ContinueFlowElementTriggerDTO> {
+    extends ExternalTaskInstanceProcessor<ScriptTask, ScriptTaskInstance> {
 
   @Inject
   protected ScriptTaskInstanceProcessor(
@@ -40,7 +39,7 @@ public class ScriptTaskInstanceProcessor
       Clock clock,
       IoMappingProcessor ioMappingProcessor,
       ProcessInstanceMapper processInstanceMapper) {
-    super(feelExpressionHandler, ioMappingProcessor, processInstanceMapper, clock);
+    super(feelExpressionHandler, clock, ioMappingProcessor, processInstanceMapper);
   }
 
   @Override
@@ -52,11 +51,18 @@ public class ScriptTaskInstanceProcessor
       VariableScope variables) {
     ScriptType scriptType = flownodeInstance.getFlowNode().getScriptType();
     if (scriptType == ScriptType.FEEL) {
-      String expression = flownodeInstance.getFlowNode().getScriptExpressions().get(0);
+      String expression = flownodeInstance.getFlowNode().getScriptExpressions().getFirst();
       JsonNode jsonNode = feelExpressionHandler.processFeelExpression(expression, variables);
       variables.put(flownodeInstance.getFlowNode().getResultVariableName(), jsonNode);
+      flownodeInstance.setState(ActtivityStateEnum.FINISHED);
+    } else if (scriptType == ScriptType.JOBWORKER) {
+      super.processStartSpecificActivityInstance(
+          processInstanceProcessingContext,
+          flowNodeInstanceProcessingContext,
+          flownodeInstance,
+          inputFlowId,
+          variables);
     }
-    flownodeInstance.setState(ActtivityStateEnum.FINISHED);
   }
 
   @Override
@@ -64,9 +70,22 @@ public class ScriptTaskInstanceProcessor
       ProcessInstanceProcessingContext processInstanceProcessingContext,
       FlowNodeInstanceProcessingContext flowNodeInstanceProcessingContext,
       ScriptTaskInstance externalTaskInstance,
-      ContinueFlowElementTriggerDTO trigger,
+      ExternalTaskResponseTriggerDTO trigger,
       VariableScope flowNodeInstanceVariables) {
-    // do nothing here, the script task is already finished
+    ScriptType scriptType = externalTaskInstance.getFlowNode().getScriptType();
+    if (scriptType == ScriptType.JOBWORKER) {
+      super.processContinueSpecificActivityInstance(
+          processInstanceProcessingContext,
+          flowNodeInstanceProcessingContext,
+          externalTaskInstance,
+          trigger,
+          flowNodeInstanceVariables);
+    } else if (scriptType == ScriptType.FEEL) {
+      // For FEEL scripts, we do not continue the instance, as it is already finished
+      log.warn(
+          "Script task {} with FEEL script type is already finished and cannot be continued.",
+          externalTaskInstance.getFlowNode().getId());
+    }
   }
 
   @Override
@@ -75,6 +94,15 @@ public class ScriptTaskInstanceProcessor
       FlowNodeInstanceProcessingContext flowNodeInstanceProcessingContext,
       ScriptTaskInstance instance,
       VariableScope variables) {
-    // Nothing to do here
+    ScriptType scriptType = instance.getFlowNode().getScriptType();
+    if (scriptType == ScriptType.JOBWORKER) {
+      super.processTerminateSpecificActivityInstance(
+          processInstanceProcessingContext, flowNodeInstanceProcessingContext, instance, variables);
+    } else if (scriptType == ScriptType.FEEL) {
+      // For FEEL scripts, we do not continue the instance, as it is already finished
+      log.warn(
+          "Script task {} with FEEL script type is already finished and cannot be continued.",
+          instance.getFlowNode().getId());
+    }
   }
 }
